--- a/src/templates/jp02/template.html
+++ b/src/templates/jp02/template.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div id="<%= mountElementId %>"></div>
+  <main id="<%= mountElementId %>"></main>
   <script>
 		$(function () {
 			$(window).on("scroll", function () {
