--- a/src/templates/銘柄相談スパッと回答くん/index.html
+++ b/src/templates/銘柄相談スパッと回答くん/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div id="<%= mountElementId %>"></div>
+  <main id="<%= mountElementId %>"></main>
   <script>
     function gofun() {
       $('#popup1').show();
